--- a/src/app/components/products/products.component.html
+++ b/src/app/components/products/products.component.html
@@ -1,3 +1,11 @@
 <section class="container">
-    <h1>Products component</h1>
+    <h1>Products Component</h1>
+    <div class="my-grid">
+        <figure *ngFor="let product of products">
+            <img [src]="product.images[0]" alt="">
+            <figcaption>
+                {{product.title}} - {{product.price}} €
+            </figcaption>
+        </figure>
+    </div>
 </section>
